# aws-rekognition

./: ecbn.txt  pyproject.toml  readme.md  rekognition.py
