[project]
name = "aws-rekognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Florian Dehn",email = "flo@katzefudder.de"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3 (>=1.38.35,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
